Correção de bugs, redundâncias e correção de funcionalidades. Funções de favoritar e desfavoritar agora estão funcionando.

--- a/src/pages/Favorite/favorite.module.css
+++ b/src/pages/Favorite/favorite.module.css
@@ -14,6 +14,8 @@
 .CardsDiv {
   padding: 1rem;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
