--- a/src/pages/Series/series.module.css
+++ b/src/pages/Series/series.module.css
@@ -1,4 +1,6 @@
 .SeriesRoot {
+    margin-top: 1rem;
+    margin-bottom: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
